@@ -1,3 +1,7 @@
 Feb 18:
     Created initial files
 
+Feb 24:
+    Started again after assignment was pushed back
+    Spent time going through prof's versions of previous assignments
+
